Fixed bug #28311 (Transparency detection code is off by 1).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@158262 c90b9560-bf6c-de11-be94-00142212c4b1